<resources>
    <string name="app_name">TicketReservationSystem</string>
    <string name="ticketCreate">Create Ticket</string>
    <string name="ticketEdit">Edit Ticket</string>
    <string name="ticketDelete">Delete Ticket</string>
    <string name="ticketView">View Ticket</string>
    <string name="finish">Finish</string>
    <string name="customerPhoneNumber">Customer Care: 999-999-9999</string>
    <string name="createTicket">Create Ticket</string>
    <string name="editTicket">Edit Ticket</string>
    <string name="deleteTicket">Delete Ticket</string>
    <string name="viewTicket">View Ticket</string>
    <string name="trip">Trip:</string>
    <string name="oneWay">One Way</string>
    <string name="roundTrip">Round Trip</string>
    <string name="printSummary">Print Summary</string>
    <string name="phoneno">Customer Care: 999-999-9999</string>
    <string name="namefield" />
    <string name="name" />
    <string name="source" />
    <string name="destination" />
    <string name="triptxt">Trip:</string>
    <string name="oneway">One-way</string>
    <string name="round">Round-trip</string>
    <string name="departure" />
    <string name="deptime" />
    <string name="returndate" />
    <string name="rettime" />
    <string name="summary">Print Summary</string>
    <string name="itenary">ITINERARY</string>
    <string name="printname" />
    <string name="src" />
    <string name="dest" />
    <string name="dep" />
    <string name="ret" />
    <string name="fin">FINISH</string>
    <string name="selecttkt">Select Ticket</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
