<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ticketreservationsystem.EditActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:id="@+id/namefield"
        android:hint="Name"
        android:autoText="false"
        android:editable="false"
        android:maxLength="20"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/source"
        android:layout_below="@+id/namefield"
        android:layout_alignParentStart="true"
        android:hint="Source"
        android:text="@string/source"
        android:layout_marginTop="10dp"
        android:editable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        android:layout_below="@+id/source"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="Destination"
        android:text="@string/destination"
        android:editable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triptxt"
        android:id="@+id/triptxt"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/destination"
        android:layout_marginTop="30dp"
        android:textIsSelectable="false"
        android:textSize="20dp"
        android:layout_marginBottom="0dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/triptypegroup"
        android:layout_below="@+id/triptxt"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneway"
            android:id="@+id/oneway"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round"
            android:id="@+id/round"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/oneway"
            android:layout_alignParentLeft="true" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/departure"
        android:hint=" Departure Date"
        android:text="@string/departure"


        android:onClick="datetimeOnClick"
        android:layout_below="@+id/triptypegroup"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/deptime"
        android:text="@string/deptime"
        android:hint="Time"


        android:onClick="datetimeOnClick"
        android:layout_alignTop="@+id/departure"
        android:layout_toEndOf="@+id/departure" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/returndate"
        android:hint="Returning Date"
        android:text="@string/returndate"
        android:visibility="invisible"


        android:onClick="retdatetimeOnClick"
        android:layout_below="@+id/departure"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/rettime"
        android:hint="Time"
        android:text="@string/rettime"
        android:visibility="invisible"


        android:onClick="retdatetimeOnClick"
        android:layout_alignTop="@+id/returndate"
        android:layout_toEndOf="@+id/returndate" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecttkt"
        android:id="@+id/editSelect"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save"
            android:layout_gravity="bottom" />

    </LinearLayout>

</RelativeLayout>
