<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ticketreservationsystem.ViewActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:id="@+id/namefield"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="Name"
        android:autoText="false"
        android:editable="false"
        android:maxLength="20" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/source"
        android:layout_below="@+id/namefield"
        android:layout_alignParentStart="true"
        android:hint="Source"
        android:text="@string/source"
        android:layout_marginTop="10dp"
        android:editable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        android:layout_below="@+id/source"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="Destination"
        android:text="@string/destination"
        android:editable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triptxt"
        android:id="@+id/triptxt"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/destination"
        android:layout_marginTop="25dp"
        android:textIsSelectable="false"
        android:textSize="20dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/triptxt"
        android:layout_alignParentStart="true"
        android:id="@+id/triptypegroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneway"
            android:id="@+id/oneway"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round"
            android:id="@+id/round"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/oneway"
            android:layout_alignParentLeft="true" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/departure"
        android:layout_below="@+id/triptypegroup"
        android:layout_alignParentStart="true"
        android:hint=" Departure Date"
        android:text="@string/departure"
        android:editable="false"
        android:onClick="datetimeOnClick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/deptime"
        android:layout_below="@+id/triptypegroup"
        android:layout_toEndOf="@+id/departure"
        android:text="@string/deptime"
        android:hint="Time"
        android:editable="false"
        android:onClick="datetimeOnClick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/returndate"
        android:layout_below="@+id/departure"
        android:layout_alignParentStart="true"
        android:hint="Returning Date"
        android:text="@string/returndate"
        android:visibility="invisible"
        android:editable="false"
        android:onClick="retdatetimeOnClick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/rettime"
        android:layout_below="@+id/departure"
        android:layout_toEndOf="@+id/departure"
        android:hint="Time"
        android:text="@string/rettime"
        android:visibility="invisible"
        android:editable="false"
        android:onClick="retdatetimeOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/viewFinishButton"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/rettime" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goToFirstTicket"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/viewFinishButton"
        android:layout_alignParentStart="true"
        android:src="@drawable/firstticket"
        android:padding="20dp"
        android:layout_alignEnd="@+id/triptxt" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goToPreviousTicket"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/goToFirstTicket"
        android:src="@drawable/previousticket"
        android:layout_marginRight="10dp"
        android:padding="20dp"
        android:layout_toEndOf="@+id/goToFirstTicket" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goToLastTicket"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/viewFinishButton"
        android:src="@drawable/lastticket"
        android:padding="20dp"
        android:layout_toEndOf="@+id/goToNextTicket" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goToNextTicket"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/viewFinishButton"
        android:src="@drawable/nextticket"
        android:padding="20dp"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@+id/viewFinishButton" />

</RelativeLayout>