<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ticketreservationsystem.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticketCreate"
        android:id="@+id/createButton"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticketEdit"
        android:id="@+id/editButton"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/createButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticketDelete"
        android:id="@+id/deleteButton"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/editButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticketView"
        android:id="@+id/viewButton"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/deleteButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:id="@+id/finishButton"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/viewButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="86dp"
            android:id="@+id/imageView"
            android:layout_gravity="bottom"
            android:layout_marginBottom="-25dp"
            android:src="@drawable/phonecall"
            android:layout_weight="0.19" />

        <EditText
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneno"
            android:text="@string/phoneno"
            android:textColor="#9366ea"
            android:layout_marginLeft="0dp"
            android:textSize="20dp"
            android:phoneNumber="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:clickable="true" />

    </LinearLayout>

</RelativeLayout>
